<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:orientation="vertical">


    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/tbMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/app_name"
        app:titleTextColor="@color/white"
        app:titleTextAppearance="@style/titles"/>

    <!--кнопка поиск-->

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_search"
        style="@style/MainMenuButtonStyle"
        android:text="@string/search"
        app:icon="@drawable/ic_search_24"/>

    <!-- кнопка медиатека-->

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_media"
        style="@style/MainMenuButtonStyle"
        android:text="@string/media"
        app:icon="@drawable/ic_media_24"/>

    <!--кнопка Настройки-->

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_settings"
        style="@style/MainMenuButtonStyle"
        android:text="@string/settings"
        app:icon="@drawable/ic_settings_24"/>


</LinearLayout>



