<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/colorSurface"
    android:paddingStart="@dimen/padding_default"
    android:paddingEnd="@dimen/padding_default">

    <!-- Заголовок с иконкой назад -->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_title"
        android:layout_marginBottom="@dimen/margin_bottom_title"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back_button"
            style="@style/SettingsIcon"
            android:layout_marginTop="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="16dp"
            android:tint="?attr/colorOnSurface"
            android:src="@drawable/ic_back_arrow_24"/>

        <TextView
            style="@style/SettingsTitle"
            android:text="@string/settings" />

    </LinearLayout>

    <LinearLayout
        style="@style/SettingsItem"
        android:layout_marginTop="@dimen/margin_top_first_item">

        <TextView
            style="@style/SettingsText"
            android:text="@string/dark_theme" />

        <Switch
            android:id="@+id/switch_theme"
            style="@style/SettingsSwitch"/>

    </LinearLayout>

    <!-- Поделиться приложением -->
    <LinearLayout
        android:id= "@+id/share_item"
        style="@style/SettingsItem">

        <TextView
            style="@style/SettingsText"
            android:text="@string/share_app" />

        <ImageView
            style="@style/SettingsIcon"
            android:src="@drawable/ic_share_24"/>

    </LinearLayout>

    <!-- Написать в поддержку -->
    <LinearLayout
        android:id = "@+id/support_item"
        style="@style/SettingsItem">

        <TextView
            style="@style/SettingsText"
            android:text="@string/write_to_support" />

        <ImageView
            style="@style/SettingsIcon"
            android:src="@drawable/ic_support_24"/>

    </LinearLayout>

    <!-- Пользовательское соглашение -->
    <LinearLayout
        android:id= "@+id/agreement_item"
        style="@style/SettingsItem">

        <TextView
            style="@style/SettingsText"
            android:text="@string/user_agreement" />

        <ImageView
            style="@style/SettingsIcon"
            android:src="@drawable/ic_arrow_agreement_24"/>

    </LinearLayout>

</LinearLayout>